--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -278,7 +278,7 @@
                             <div class="input-group date">
                                 @Html.TextBoxFor(u => u.FechaEmision, "{0:dd/MM/yyyy}", new { @class = "form-control rol-accs", @placeholder = "Fecha", @type = "text", @readonly = "true" })
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                                @Html.ValidationMessageFor(u => u.FechaEmision, "", new { @style = "color:red;" })
+                                @*@Html.ValidationMessageFor(u => u.FechaEmision, "", new { @style = "color:red;" })*@
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -296,7 +296,7 @@
                             <div class="input-group date">
                                 @Html.TextBoxFor(u => u.FechaConclusion, "{0:dd/MM/yyyy}", new { @class = "form-control rol-accs", @placeholder = "Fecha de cancelación", @type = "text", @readonly = "true" })
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                                @Html.ValidationMessageFor(u => u.FechaConclusion, "", new { @style = "color:red;" })
+                                @*@Html.ValidationMessageFor(u => u.FechaConclusion, "", new { @style = "color:red;" })*@
                             </div>
                         </div>
                     </div>
