--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -444,8 +444,8 @@
     <!-- Angular -->
     <script src="~/Content/themes/angular/myApp.js"></script>
     <!-- Validation -->
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    @*<script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
     <!-- App -->
     <script src="~/Content/themes/admin-nb/js/ui-load.js"></script>
     <script src="~/Content/themes/admin-nb/js/ui-jp.config.js"></script>
