--- a/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
@@ -98,7 +98,8 @@
             sPrevious: 'Anterior',
             sNext: 'Siguiente'
         }
-    }
+    },
+    aaSorting: [[0,'desc']]
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
@@ -208,7 +209,7 @@
                             <label for="fechaFin">Fecha Fin:</label>
                             <div class="form-group date">
                                 <div class="input-group">
-                                    <input type="text" name="fechaFin" id="fechaFin" readonly="readonly" class="form-control" value="@(new DateTime(DateTime.Now.Year, 12, 31).ToString("dd/MM/yyyy"))"> 
+                                    <input type="text" name="fechaFin" id="fechaFin" readonly="readonly" class="form-control" value="@(new DateTime(DateTime.Now.Year, 12, 31).ToString("dd/MM/yyyy"))">
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </div>
