--- a/NubeBooks/Views/Admin/Libro.cshtml
+++ b/NubeBooks/Views/Admin/Libro.cshtml
@@ -207,7 +207,8 @@ else { cadena = "Actualizar"; }
             sPrevious: 'Anterior',
             sNext: 'Siguiente'
         }
-    }
+    },
+    aaSorting: [[0,'desc']]
 }" class="table table-striped b-t b-b dataTable">
                     <thead>
                         <tr>
