--- a/NubeBooks/Views/Admin/InventariosIngreso.cshtml
+++ b/NubeBooks/Views/Admin/InventariosIngreso.cshtml
@@ -77,7 +77,8 @@
             sPrevious: 'Anterior',
             sNext: 'Siguiente'
         }
-    }
+    },
+    aaSorting: [[0,'desc']]
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
