--- a/NubeBooks/Views/Admin/Libro.cshtml
+++ b/NubeBooks/Views/Admin/Libro.cshtml
@@ -148,13 +148,13 @@ else { cadena = "Actualizar"; }
                 </div>
                 if (Model != null && Model.IdCuentaBancaria != 0)
                 {
-                    <div class="col-xs-5 col-xs-offset-1">
+                    <div class="col-md-6 no-padder">
                         <div class="panel padder-v bg-success item text-center">
                             <div class="h1 text-white font-thin h1">@Model.SimboloMoneda @Model.SaldoDisponible.ToString("N2", CultureInfo.InvariantCulture)</div>
                             <span class="text-muted text-xs">Saldo Disponible</span>
                         </div>
                     </div>
-                    <div class="col-xs-5">
+                    <div class="col-md-6 no-padder">
                         <div class="panel padder-v bg-primary item text-center">
                             <div class="h1 text-white font-thin h1">@Model.SimboloMoneda @Model.SaldoBancario.ToString("N2", CultureInfo.InvariantCulture)</div>
                             <span class="text-muted text-xs">Saldo Bancario</span>
