--- a/NubeBooks/Views/Admin/Libro.cshtml
+++ b/NubeBooks/Views/Admin/Libro.cshtml
@@ -208,7 +208,8 @@ else { cadena = "Actualizar"; }
             sNext: 'Siguiente'
         }
     },
-    aaSorting: [[0,'desc']]
+    aaSorting: [[0,'desc']],
+    pageLength: 50,
 }" class="table table-striped b-t b-b dataTable">
                     <thead>
                         <tr>
