--- a/NubeBooks/Views/Admin/Index.cshtml
+++ b/NubeBooks/Views/Admin/Index.cshtml
@@ -231,6 +231,7 @@
         <div class="wrapper-md" ng-controller="FlotChartDemoCtrl">
             <!-- stats -->
             <div class="row">
+                @Html.Partial("_showAlertMessages")
                 <div class="col-md-5">
                     <div class="row row-sm text-center">
                         <div class="col-xs-6">
