--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -34,8 +34,8 @@
                 </button>
                 <!-- brand -->
                 <a href="@Url.Action("Index", "Admin")" class="navbar-brand text-lt">
-                    <i class="fa fa-btc"></i>
-                    <img src="~/Content/themes/admin-nb/img/logo.png" alt="." class="hide">
+                    @*<i class="fa fa-btc"></i>
+                    <img src="~/Content/themes/admin-nb/img/logo.png" alt="." class="hide">*@
                     <span class="hidden-folded m-l-xs">@ViewBag.NombreEmpresa</span>
                 </a>
                 <!-- / brand -->
@@ -69,7 +69,7 @@
                         @{ var user = (NubeBooks.Core.DTO.UsuarioDTO)HttpContext.Current.Session["User"]; }
                         <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
                             <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                                <img src="~/Content/themes/admin-nb/img/b18.jpg" alt="...">
+                                <img src="~/Content/themes/admin-nb/img/user.png" alt="...">
                             </span>
                             @user.Nombre &nbsp;<span class="hidden-sm hidden-md"></span><b class="caret"></b>
                         </a>
@@ -77,6 +77,9 @@
                         <ul class="dropdown-menu animated fadeInRight w">
                             <li>
                                 <a href="@Url.Action("Usuario", new { id = user.IdUsuario})" ui-sref="app.page.profile">Perfil</a>
+                            </li>
+                            <li>
+                                <a href="@Url.Action("Empresa")">Empresa</a>
                             </li>
                             <li class="divider"></li>
                             <li>
